<resources>
    <string name="app_name">SafeHawk</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SafeHawk</string>
    <string name="nav_header_subtitle">Dispositivos Móviles</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">SafeHawk</string>
    <string name="menu_gallery">Configuración</string>
    <string name="menu_slideshow">Perfil de usuario</string>

    <string name="registro">Registrarse</string>
    <string name="inicio">Iniciar Sesión</string>
    <string name="nombre">Ingresar nombre:</string>
    <string name="clave">Ingresar clave: </string>
    <string name="psw">Ingresar contraseña </string>
    <string name="tomar_foto">Tomar foto</string>
    <string name="guardar">Guardar</string>
    <string name="limpiar">Limpiar</string>
    <string name="contenido">Contenido:</string>
    <string name="ingresarcont">Ingresar el texto...</string>
    <string name="ingresarnombre">Ingresar el nombre ...</string>

    <string name="home_second">Home Second</string>
</resources>
