<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Agregar_notas">

    <Button
        android:id="@+id/btnLimpiarN"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="19dp"
        android:layout_weight="1"
        android:background="@drawable/boton"
        android:text="@string/limpiar"
        android:textColor="@color/colorLetras"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/btnGuardarN"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="80dp"
        android:layout_weight="1"
        android:background="@drawable/boton"
        android:text="@string/guardar"
        android:textColor="@color/colorLetras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="150dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/txtnombre"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:ems="10"
            android:hint="@string/ingresarnombre"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contenido"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/txtContenido"
            android:layout_width="match_parent"
            android:layout_height="343dp"
            android:autofillHints=""
            android:background="@color/colorLetras"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/ingresarcont"
            android:importantForAutofill="no"
            android:inputType="textMultiLine" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>